전남대 BE_강명덕 3주차 과제 (3단계) (#269)
* docs(README.md): step3 기능 요구사항 작성

* feat(ProductService): 상품 서비스 레이어 페이징 적용

* feat(ProductController): 상품 컨트롤러 레이어 페이징 적용

* feat(WishList): 위시 리스트 페이징 구현

* chore: 로컬 환경설정 추가

* refactor(TestUtils): utils 패지키로 이동

* feat(RestPage): 테스트 응답인 Page를 직렬화하기 위한 커스텀 클래스 구현

* test: E2E 테스트에 페이징 변경사항 반영